@@ -2,7 +2,7 @@ dnl -----------------------------------------------------------------------
 dnl configure.in for xmp
 dnl
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.18 2007-08-17 12:48:00 cmatsuoka Exp $
+dnl $Id: configure.in,v 1.19 2007-08-21 12:02:18 cmatsuoka Exp $
 dnl -----------------------------------------------------------------------
 
 AC_INIT
@@ -30,8 +30,8 @@ DRIVERS="wav.o"
 AC_SUBST(MIXER)
 MIXER="mix_all.o"
 
-AC_SUBST(XMMS)
-XMMS=""
+AC_SUBST(BMP_PLUGIN)
+BMP_PLUGIN=""
 
 dnl -----------------------------------------------------------------------
 dnl Config arguments
@@ -49,8 +49,8 @@ AC_ARG_ENABLE(arts,
 AC_ARG_ENABLE(arts,
     [  --enable-nas            Compile NAS support])
 
-AC_ARG_ENABLE(xmms,
-    [  --disable-xmms          Don't build the XMMS plugin])
+AC_ARG_ENABLE(bmp-plugin,
+    [  --enable-bmp-plugin     Compile the Beep Media Player plugin])
 
 AC_ARG_ENABLE(esd,
     [  --enable-esd            Compile ESD support])
@@ -68,10 +68,10 @@ AC_ARG_WITH(nas,
     [  --with-nas=<path>       NAS prefix (optional)],
     nas_path="$withval")
 
-AC_ARG_WITH(xmms,
-    [  --with-xmms=<path>      XMMS prefix (optional)],
-    xmms_path="$withval",
-    xmms_path="/usr")
+AC_ARG_WITH(bmp,
+    [  --with-bmo=<path>       Beep Media Player prefix (optional)],
+    bmp_path="$withval",
+    bmp_path="/usr")
 
 dnl -----------------------------------------------------------------------
 dnl Check platform.
@@ -100,7 +100,7 @@ case ${target_os} in
     CFLAGS="${CFLAGS} -D_WIN32"
     X_XMP=""
     enable_arts=no
-    enable_xmms=no
+    enable_bmp_plugin=no
     ;;
 esac
 
@@ -143,30 +143,30 @@ XMP_CACHED_TEST(for ${oss_path},ac_cv_dir_usr_lib_oss,-d /usr/lib/oss,
         CINCS="${CINCS} -I/usr/src/sys/i386/isa/sound",))
 
 dnl -----------------------------------------------------------------------
-dnl Check for XMMS
+dnl Check for Beep Media Player
 dnl -----------------------------------------------------------------------
 
-if test "${enable_xmms}" != "no"; then
-    xmms_cflags="`xmms-config --cflags 2>/dev/null`"
-    if test ! -z "${xmms_cflags}"; then
-        AS_MESSAGE(checking for XMMS flags... ${xmms_cflags}...)
+if test "${enable_bmp_plugin}" != "no"; then
+    bmp_cflags="`pkg-config bmp --cflags 2>/dev/null`"
+    if test ! -z "${bmp_cflags}"; then
+        AS_MESSAGE(checking for Beep Media Player flags... ${bmp_cflags}...)
     else
-        if test "${enable_xmms}" = "yes"; then
-            AC_MSG_ERROR(Can't find XMMS files (is xmms-config in PATH?))
+        if test "${enable_bmp_plugin}" = "yes"; then
+            AC_MSG_ERROR(Can't find Beep Media Player files)
         fi
-        AC_MSG_WARN(xmms-config not found)
-        enable_xmms="no"
+        AC_MSG_WARN(not found)
+        enable_bmp_plugin="no"
     fi
 fi
 
-if test "${enable_xmms}" != "no"; then
-    CPPFLAGS="${CINCS} `xmms-config --cflags`"
-    AC_CHECK_HEADERS(xmms/plugin.h)
-    XMMS="xmms"
-fi
+if test "${enable_bmp_plugin}" != "no"; then
+    CPPFLAGS="${CINCS} `pkg-config bmp --cflags`"
+    AC_CHECK_HEADERS(bmp/plugin.h)
+    BMP_PLUGIN="bmp"
 
-if test "${ac_cv_header_xmms_plugin_h}" = "yes"; then
-    PLUGIN="xmms"
+    if test "${ac_cv_header_bmp_plugin_h}" = "yes"; then
+        PLUGIN="bmp"
+    fi
 fi
 
 dnl -----------------------------------------------------------------------
